--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -15,11 +15,13 @@
   "dependencies": {
     "gatsby": "^2.7.3",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-source-filesystem": "^2.0.37",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "env-cmd": "^9.0.1",
     "prettier": "^1.17.1"
   },
   "repository": {
